# BioAI_FieldNotes

./: .gitignore  README.md  pyproject.toml
bioai_fieldnotes/: __init__.py  cli.py  clustering.py  connectors.py  models.py  pipeline.py  pricing.py  query_planner.py  ranking.py  settings.py  storage.py  story_selection.py  summarizer.py  text.py  web.py
bioai_fieldnotes/static/: app.css
bioai_fieldnotes/templates/: base.html  cluster_detail.html  costs.html  index.html  message.html  report.html  run_detail.html  runs.html  scan.html
configs/: fallback_model_prices.json
exports/: report-12.html
tests/: test_core.py
